# rs-watchlist

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml
.github/workflows/: audit.yaml  docker_build.yaml  docker_hub.yaml  dockere_hub.yaml  linter.yaml
api/: Cargo.toml  Dockerfile
api/docs/: swagger.yaml
api/src/: database.rs  main.rs  router.rs  security.rs
api/src/controllers/: controllers_utils.rs  media_controler.rs  mod.rs  response_body.rs  user_controler.rs  watchlist_controler.rs
api/src/middlewares/: acceptable_middleware.rs  log.rs  log_middleware.rs  mod.rs
api/src/models/: database_model.rs  media.rs  media_model.rs  mod.rs  model_trait.rs  user.rs  user_model.rs  watchlist.rs  watchlist_model.rs
client/: Cargo.toml  build.sh  config.json  index.html
client/public/styles/: global.css  index.css  login.css
client/src/: app.rs  main.rs  router.rs
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/components/: login.rs  mod.rs  utils.rs  watchlist.rs
client/src/models/: api_model_trait.rs  config.rs  media.rs  mod.rs  response_body.rs  user.rs  watchlist.rs
client/src/pages/: index.rs  login.rs
