[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.196", features = ["derive"] }
surrealdb = "1.1.1"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
