[package]
name = "api"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", default-features = false, features = ["json", "tokio", "http2"] }
axum-auth = { version = "0.7.0", default-features = false, features = ["auth-basic"] }
futures-util = { version = "0.3.30", default-features = false }
hex = {version = "0.4.3", default-features = false }
once_cell = {version = "1.19.0", default-features = false }
regex = { version = "1.10.3", default-features = false }
ring = {version = "0.17.7", default-features = false }
serde = { version = "1.0.196", default-features = false , features = ["derive"] }
serde_json = { version = "1.0.113", default-features = false }
surrealdb = { version = "1.1.1", default-features = false, features = ["protocol-ws"] }
tokio = { version = "1.35.1", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.1", default-features = false ,features = ["timeout", "trace"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }
