[package]
name = "client-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde_json = { version = "1.0.113", default-features = false }
yew-hooks = { version = "0.3.0", default-features = false }
regex = { version = "1.10.3", default-features = false }
reqwest = { version = "0.11.24", default-features = false, features = ["json"]}
yew-router = { version = "0.18.0", default-features = false }

[workspace]
members = ["src-tauri"]
